Add copy-paste for data cells

--- a/forecastingApplication/src/app/display-page/forecast-display/forecast-display.component.css
+++ b/forecastingApplication/src/app/display-page/forecast-display/forecast-display.component.css
@@ -34,7 +34,12 @@ header {
   color: rgb(0, 0, 0);
 }
 
-
+.selected {
+  background-color: #7df5d1;
+}
+.copied{
+  background-color: #7d9df5;
+}
 .lds-spinner {
   color: official;
   display: inline-block;
