--- a/forecastingApplication/src/app/display-page/forecast-display/forecast-display.component.css
+++ b/forecastingApplication/src/app/display-page/forecast-display/forecast-display.component.css
@@ -29,9 +29,9 @@ header {
 }
 
 .totalRowClass{
-  background-color: rgb(137, 221, 148);
-  font-weight: bolder;
-  color: rgb(0, 0, 0);
+  background-color: rgb(137, 221, 148) !important;
+    font-weight: bolder !important;
+    color: rgb(0, 0, 0) !important;
 }
 
 .selected {
