--- a/forecastingApplication/src/app/display-page/forecast-display/forecast-display.component.html
+++ b/forecastingApplication/src/app/display-page/forecast-display/forecast-display.component.html
@@ -44,7 +44,7 @@
   <div class="table-responsive">
     <table class="table">
     <!-- Table Header -->
-    <thead class="table-info">
+    <thead>
       <tr>
         <th *ngFor="let name of levelNamesArr">
           {{name}}
